tests/NormalTests/paczka1/small_fuzzy/31426586.err
Error in line 1: F1I2 S723 4,0
Error in line 9: ESOGdbJbw15 S723 57,4
Error in line 10: ESOGdbJbw15 A999 66,1
